# Play-With-Fire

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
resources/images/: Untitled-2.psd
src/views/: Background.cpp  Background.h  Block.cpp  Block.h  Bomb.cpp  Bomb.h  Box.cpp  Box.h  Boxx.cpp  Boxx.h  Button.cpp  Button.h  Item.cpp  Item.h  Player.cpp  Player.h  TextField.cpp  TextField.h  Wall.cpp  Wall.h  chooseCharacter.cpp  chooseCharacter.h  combobox.cpp  combobox.h  label.cpp  label.h
src/windows/: Game.cpp  Game.h  Home.cpp  Home.h  ScoreBoard.cpp  ScoreBoard.h
